--- a/app.json
+++ b/app.json
@@ -27,7 +27,7 @@
       [
         "expo-image-picker",
         {
-          "photosPermission": "The app accesses your photos to let you share them with your friends."
+          "cameraPermission": "The app accesses your camera to let you share them."
         }
       ]
     ]
