--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-screens": "3.31.1",
     "expo-image-picker": "~15.0.7",
     "expo-location": "~17.0.1",
-    "react-native-maps": "1.14.0"
+    "react-native-maps": "1.14.0",
+    "expo-sqlite": "~14.0.6",
+    "expo-splash-screen": "~0.27.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
